# igneous_linearizer

./: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  run-example  transpile-self  transpile_self
example_code/: sicp.compound.displayln.md  sicp.compound.f.md  sicp.compound.square.md
example_scheme/: main.scm  transpile_and_run
example_scheme/src_vault/: one-thousand-transclusion.md  sicp.compound.main.md  sicp.compound.sum-of-squares.md
src/: main.rs
src-vault/: Igneous Linearizer Snippets.md  igneous.Args.md  igneous.Hyperstring.md  igneous.HyperstringSegment.md  igneous.crawl.md  igneous.cyclic_transclusion_check.md  igneous.linearize.md  igneous.parse_hyperstring.md  igneous.parse_page.md  igneous.strip_dataview_block.md  igneous.transclusions.md
src_vault/: Igneous Linearizer imports.md  igneous.Args.md  igneous.Page.md  igneous.crawl.md  igneous.cyclic_transclusion_check.md  igneous.hyperstrings_to_string.md  igneous.linearize.md  igneous.link_title_or_name.md  igneous.links.md  igneous.main.md  igneous.parse_frontmatter.md  igneous.parse_page.md  igneous.references.md  igneous.strip_dataview_block.md  igneous.to_plaintext.md  igneous.transform.md
