[package]
name = "igneous-linearizer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Transpile a program in the form of [[wikilinks]] markdown files into a single file.
Do this by crawling links starting from ROOT_FILE_PATH.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
gray_matter = "0.2.8"
petgraph = "0.6.5"
regex = "1.10.4"
